// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for MarketoPrivate's sendForm destination action: all fields 1`] = `
Object {
  "formId": "M*egw50Q7^Hr(oa9",
  "input": Array [
    Object {
      "cookie": "M*egw50Q7^Hr(oa9",
      "leadFormFields": Object {
        "testType": "M*egw50Q7^Hr(oa9",
      },
      "visitorData": Object {
        "email": "vofehteg@pa.do",
        "testType": "M*egw50Q7^Hr(oa9",
      },
    },
  ],
}
`;

exports[`Testing snapshot for MarketoPrivate's sendForm destination action: required fields 1`] = `
Object {
  "formId": "M*egw50Q7^Hr(oa9",
  "input": Array [
    Object {
      "leadFormFields": Object {
        "testType": "M*egw50Q7^Hr(oa9",
      },
      "visitorData": Object {
        "email": "vofehteg@pa.do",
        "testType": "M*egw50Q7^Hr(oa9",
      },
    },
  ],
}
`;
